# hello_redirect

./: Dockerfile.gateway  Dockerfile.runtime  Makefile  README.md  demo.py  docker-compose.yml  docker_allocator.py  gateway_app.py  pyproject.toml  requirements.txt  runtime_app.py  runtime_registry.py  security.py  simple_allocator.py  tool_spec.0.1.0.yaml
docs/: IMPLEMENTATION_SUMMARY.md
qavs/: context.0.1.0.jsonl
src/hello_redirect/entry_points/cli/: __main__.py  hello_redirect_cli.py
tests/: test_e2e.py
var/spec/design/: redirect_poc.0.1.0.yml
